# ChatCraft-Server

./: .gitignore
server/: CMakeLists.txt  readme.md
server/ChatServer/: CMakeLists.txt
server/ChatServer/include/: AsioIOContextPool.h  CLogicSystem.h  CMessageNode.h  CServer.h  CSession.h
server/ChatServer/src/: AsioIOContextPool.cpp  CLogicSystem.cpp  CMessageNode.cpp  CServer.cpp  CSession.cpp  main.cpp
server/GateServer/: CMakeLists.txt
server/GateServer/include/: AsioIOContextPool.h  CServer.h  GrpcStubPool.h  HttpConnection.h  LogicSystem.h  StatusGrpcClient.h  VerifyGrpcClient.h  const.h
server/GateServer/src/: AsioIOContextPool.cpp  CServer.cpp  GrpcStubPool.cpp  HttpConnection.cpp  LogicSystem.cpp  StatusGrpcClient.cpp  StatusStubPool.cpp  VerifyGrpcClient.cpp  main.cpp
server/StatusServer/: CMakeLists.txt
server/StatusServer/include/: StatusServer.h
server/StatusServer/src/: StatusServer.cpp  main.cpp
server/VerifyServer/: config.js  const.js  email.js  package-lock.json  package.json  proto.js  redis.js  server.js
server/common/: CMakeLists.txt  config.ini
server/common/include/: ConfigManager.h  MysqlManager.h  RedisManager.h  StatusGrpcClient.h  StatusStubPool.h  UsersDAO.h  VerifyGrpcClient.h  VerifyStubPool.h  const.h
server/common/proto/: message.proto
server/common/src/: ConfigManager.cpp  MysqlManager.cpp  RedisManager.cpp  StatusGrpcClient.cpp  UsersDAO.cpp  VerifyStubPool.cpp
server/include/: CServer.h  HttpConnection.h  LogicSystem.h  const.h
server/other/: run.md  table.sql
server/src/: CServer.cpp  main.cpp
